--- a/docker/.env
+++ b/docker/.env
@@ -22,13 +22,13 @@ ES_HOST=es01
 ES_PORT=1200
 
 # The password for Elasticsearch. 
-ELASTIC_PASSWORD=infini_rag_flow
+ELASTIC_PASSWORD=rag_flow
 
 # The port used to expose the Kibana service to the host machine, 
 # allowing EXTERNAL access to the service running inside the Docker container.
 KIBANA_PORT=6601
 KIBANA_USER=rag_flow
-KIBANA_PASSWORD=infini_rag_flow
+KIBANA_PASSWORD=rag_flow
 
 # The maximum amount of the memory, in bytes, that a specific Docker container can use while running.
 # Update it according to the available memory in the host machine.
@@ -43,7 +43,7 @@ INFINITY_HTTP_PORT=23820
 INFINITY_PSQL_PORT=5432
 
 # The password for MySQL. 
-MYSQL_PASSWORD=infini_rag_flow
+MYSQL_PASSWORD=rag_flow
 # The hostname where the MySQL service is exposed
 MYSQL_HOST=mysql
 # The database of the MySQL service to use
@@ -65,7 +65,7 @@ MINIO_PORT=9000
 MINIO_USER=rag_flow
 # The password for MinIO. 
 # When updated, you must revise the `minio.password` entry in service_conf.yaml accordingly.
-MINIO_PASSWORD=infini_rag_flow
+MINIO_PASSWORD=rag_flow
 
 # The hostname where the Redis service is exposed
 REDIS_HOST=redis
@@ -73,7 +73,7 @@ REDIS_HOST=redis
 # allowing EXTERNAL access to the Redis service running inside the Docker container.
 REDIS_PORT=6379
 # The password for Redis.
-REDIS_PASSWORD=infini_rag_flow
+REDIS_PASSWORD=rag_flow
 
 # The port used to expose RAGFlow's HTTP API service to the host machine, 
 # allowing EXTERNAL access to the service running inside the Docker container.
@@ -81,10 +81,12 @@ SVR_HTTP_PORT=9380
 
 # The RAGFlow Docker image to download.
 # Defaults to the v0.16.0-slim edition, which is the RAGFlow Docker image without embedding models.
-RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0-slim
+# RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0-slim
 #
 # To download the RAGFlow Docker image with embedding models, uncomment the following line instead:
-# RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0
+RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0
+
+
 # 
 # The Docker image of the v0.16.0 edition includes:
 # - Built-in embedding models:
@@ -116,7 +118,8 @@ RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0-slim
 # RAGFLOW_IMAGE=registry.cn-hangzhou.aliyuncs.com/infiniflow/ragflow:nightly
 
 # The local time zone.
-TIMEZONE='Asia/Shanghai'
+TIMEZONE='America/Los_Angeles'               
+#TIMEZONE='Asia/Shanghai'
 
 # Uncomment the following line if you have limited access to huggingface.co:
 # HF_ENDPOINT=https://hf-mirror.com
